# i18n-mono

./: .commitlintrc.json  .eslintrc.json  .gitignore  .lintstagedrc.json  ANALYSIS_REPORT.md  CHANGELOG.md  CICD_GUIDE.md  COMMIT.md  CONFIG_FILE_FALLBACK.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DIRECT_IMPORT_TYPE_SUPPORT.md  DUAL_PARSER_GUIDE.md  ESLINT_FIX_REPORT.md  FALLBACK_NAMESPACE_DESIGN.md  FALLBACK_NAMESPACE_IMPLEMENTATION_PLAN.md  FALLBACK_NAMESPACE_USAGE_GUIDE.md  GETTING_STARTED.md  GITHUB_ACTIONS_SETUP.md  JEST_SETUP.md  MERGE_HISTORY.md  NAMESPACE_LOCATION_EXAMPLE.md  OPEN_MISSION_REFLECTION.md  PERFORMANCE_MONITORING.md  README.md  REFACTORING_REPORT.md  RELEASE_v1.7.5.md  SECURITY.md  SERVER_MODE_IMPROVEMENT_PRD.md  TECH_BLOG_TYPE_SAFETY.md  TEST_VERIFICATION_REPORT.md  TURBOREPO_SETUP.md  TYPE_INFERENCE_AND_SPLITTING.md  TYPE_NAMESPACE_REPORT.md  USAGE_COMPARISON.md  USAGE_EXAMPLES.md  VERCEL_SETUP.md  jest.config.js  package-lock.json  package.json  (+5 more)
apps/: linter.js
scripts/t-wrapper-rust/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
scripts/t-wrapper-rust/docs/: rayon-usage.md
scripts/t-wrapper-rust/src/: ast_helpers.rs  ast_transformers.rs  import_manager.rs  lib.rs  main.rs  parser.rs  transformer.rs  translation_wrapper.rs  utils.rs  wrapper.rs
scripts/t-wrapper-rust/src/applier/: mod.rs  translation_applier.rs
scripts/t-wrapper-rust/tests/: ast_helpers_test.rs  ast_transformers_test.rs  e2e_test.rs  import_manager_test.rs  integration_test.rs  parser_test.rs  translation_wrapper_test.rs  utils_test.rs  wtf8atom_integration_test.rs
(+255 files in other folders)
